tests/baselines/reference/additionOperatorWithUndefinedValueAndInvalidOperands.errors.txt
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(11,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(12,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(13,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(14,14): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(15,14): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(16,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(19,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(20,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(21,10): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(22,11): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts(23,11): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithUndefinedValueAndInvalidOperands.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    var a: boolean;
    var b: Object;
    var c: void;
    var d: Number;
    
    // undefined + boolean/Object
    var r1 = undefined + a;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r2 = undefined + b;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r3 = undefined + c;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r4 = a + undefined;
                 ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r5 = b + undefined;
                 ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r6 = undefined + c;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
    // other cases
    var r7 = undefined + d;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r8 = undefined + true;
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r9 = undefined + { a: '' };
             ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r10 = undefined + foo();
              ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    var r11 = undefined + (() => { });
              ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.